# C--Text-Based-Game

testGame/: Battle.cpp  Battle.h  BountyHunt.cpp  BountyHunt.h  CMakeLists.txt  Character.cpp  Character.h  CrewManager.cpp  CrewManager.h  Enemies.cpp  Enemies.h  Gameship.cpp  Gameship.h  ListBattle.cpp  ListBattle.h  Makefile  Manage.cpp  Manage.h  Object.cpp  Object.h  UnfortunateEvents.cpp  UnfortunateEvents.h  battleArr.h  main.cpp  mainCharacter.cpp  mainCharacter.h  spaceship.h
testGame/cody/: dialogue1.txt
